fixed mobile version, added navbar collapsability and addressed padding issues.

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,9 @@ html{
   overflow-x: hidden;
   width: 100%;
 }
-@media screen and (max-width: 768px) {
-  
+@media screen and (max-width: 458px) {
+  .App {
+    
+    
+  }
 }
