--- a/src/styles/OtherWork.css
+++ b/src/styles/OtherWork.css
@@ -44,3 +44,17 @@
       grid-template-columns: repeat(2, 1fr); /* 2 columns for medium screens */
     }
   }
+  @media screen and (max-width: 458px) {
+    .otherwork-section{
+      max-width:100vw;
+      padding: 0px;
+
+    }
+    .otherwork-container{
+      padding: 0px 0px;
+      grid-template-columns: repeat(1, 1fr);
+  }
+  .other-container{
+    margin: 0px auto;
+  }
+  }
