--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -145,3 +145,22 @@ h3{
     margin: 0px auto;
   }
 }
+@media screen and (max-width: 458px) {
+  .skills-section{
+    max-width: 100vw;
+    padding: 2px;
+  }
+
+  .skills-container{
+    padding: 0px 0px;
+    max-width: 100%;
+  }
+  .skills-box{
+    margin: 0px auto;
+  }
+  .empty-skills-box{
+    margin: 0px auto;
+    padding: 25px 0px;
+  }
+  
+}
